Fix the new pxplus_chipplayer.ttf to match old PxPlus metrics
New font didn't quite align to the pixel grid, causing unavoidable
blurry edges across the width of the screen.

--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,13 @@
 @font-face {
     font-family: VGA_SquarePx;
     /*src: url(fonts/pxplus_vga_squarepx.ttf) format('truetype');*/
-    src: url(fonts/pxplus-chipplayer.ttf) format('truetype');
+    src: url(fonts/pxplus_chipplayer.ttf) format('truetype');
     font-weight: 400;
     font-style: normal
 }
 
 * {
-    font-size: 19px !important;
+    font-size: 24px !important;
     font-family: VGA_SquarePx, monospace !important;
     -webkit-font-smoothing: antialiased; /* supports Japanese characters better than 'none' */
     -webkit-tap-highlight-color: rgba(0,0,0,0);
